Streamlined Examen.java